Pre undoredo, map layer editor close to done

--- a/EGMapEditor/EGMapEditor.csproj
+++ b/EGMapEditor/EGMapEditor.csproj
@@ -34,7 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="SFML.Net, Version=2.2.0.0, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\SFML.Net.Portable.1.1.0\lib\SFML.Net.dll</HintPath>
+      <HintPath>..\packages\SFML.Net.Portable.1.1.1\lib\SFML.Net.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -42,6 +42,10 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WeifenLuo.WinFormsUI.Docking, Version=3.0.0.0, Culture=neutral, PublicKeyToken=5cded1a1a0a7b481, processorArchitecture=MSIL">
+      <HintPath>..\packages\DockPanelSuite.3.0.0-alpha8\lib\net40\WeifenLuo.WinFormsUI.Docking.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ControlDocker.cs">
@@ -51,10 +55,10 @@
       <DependentUpon>ControlDocker.cs</DependentUpon>
     </Compile>
     <Compile Include="Map.cs" />
-    <Compile Include="MapController.cs">
-      <SubType>UserControl</SubType>
+    <Compile Include="DockContent\MapController.cs">
+      <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MapController.Designer.cs">
+    <Compile Include="DockContent\MapController.Designer.cs">
       <DependentUpon>MapController.cs</DependentUpon>
     </Compile>
     <Compile Include="MapEditor.cs">
@@ -68,18 +72,6 @@
     </Compile>
     <Compile Include="MapLayersViewer.Designer.cs">
       <DependentUpon>MapLayersViewer.cs</DependentUpon>
-    </Compile>
-    <Compile Include="MapsContainer.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="MapsContainer.Designer.cs">
-      <DependentUpon>MapsContainer.cs</DependentUpon>
-    </Compile>
-    <Compile Include="MapViewer.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="MapViewer.Designer.cs">
-      <DependentUpon>MapViewer.cs</DependentUpon>
     </Compile>
     <Compile Include="ProjectExplorer.cs">
       <SubType>UserControl</SubType>
@@ -101,17 +93,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TilesetController.cs">
-      <SubType>UserControl</SubType>
+    <Compile Include="DockContent\TilesetController.cs">
+      <SubType>Form</SubType>
     </Compile>
-    <Compile Include="TilesetController.Designer.cs">
+    <Compile Include="DockContent\TilesetController.Designer.cs">
       <DependentUpon>TilesetController.cs</DependentUpon>
-    </Compile>
-    <Compile Include="TilesetViewer.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="TilesetViewer.Designer.cs">
-      <DependentUpon>TilesetViewer.cs</DependentUpon>
     </Compile>
     <Compile Include="ToolboxViewer.cs">
       <SubType>UserControl</SubType>
@@ -125,10 +111,11 @@
     <Compile Include="ToolPropertiesViewer.Designer.cs">
       <DependentUpon>ToolPropertiesViewer.cs</DependentUpon>
     </Compile>
+    <Compile Include="UndoRedo.cs" />
     <EmbeddedResource Include="ControlDocker.resx">
       <DependentUpon>ControlDocker.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MapController.resx">
+    <EmbeddedResource Include="DockContent\MapController.resx">
       <DependentUpon>MapController.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MapEditor.resx">
@@ -136,12 +123,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MapLayersViewer.resx">
       <DependentUpon>MapLayersViewer.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="MapsContainer.resx">
-      <DependentUpon>MapsContainer.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="MapViewer.resx">
-      <DependentUpon>MapViewer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ProjectExplorer.resx">
       <DependentUpon>ProjectExplorer.cs</DependentUpon>
@@ -161,8 +142,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="TilesetViewer.resx">
-      <DependentUpon>TilesetViewer.cs</DependentUpon>
+    <EmbeddedResource Include="DockContent\TilesetController.resx">
+      <DependentUpon>TilesetController.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -179,6 +160,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
