Undo Redo setted up and added to map

--- a/EGMapEditor/EGMapEditor.csproj
+++ b/EGMapEditor/EGMapEditor.csproj
@@ -112,6 +112,7 @@
       <DependentUpon>ToolPropertiesViewer.cs</DependentUpon>
     </Compile>
     <Compile Include="UndoRedo.cs" />
+    <Compile Include="UndoRedoEventArgs.cs" />
     <EmbeddedResource Include="ControlDocker.resx">
       <DependentUpon>ControlDocker.cs</DependentUpon>
     </EmbeddedResource>
