--- a/EGMapEditor/packages.config
+++ b/EGMapEditor/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package Id="ArchaicSoft.DockPanel" version="1.1.2" targetFramework="net452" />
-  <package Id="SFML.Net.Portable" version="1.2.1" targetFramework="net452" />
+  <package id="ArchaicSoft.DockPanel" version="1.2.2" targetFramework="net452" />
+  <package id="SFML.Net.Portable" version="1.2.3" targetFramework="net452" />
 </packages>
